<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_toplayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <TextView
            android:id="@+id/txtEnterVehicleID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragmentAddVehicle_txtEnterVehicleID_text"
            android:textSize="@dimen/fragmentAddVehicle_txtEnterVehicleId_textSize"
            android:textColor="@color/base_grey"
            app:layout_constraintTop_toTopOf="@id/topLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/fragmentAddVehicle_txtEnterVehicleId_marginStart"
            android:layout_marginTop="@dimen/fragmentAddVehicle_txtEnterVehicleId_marginTop"/>
        <EditText
            android:id="@+id/edtVehicleID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtEnterVehicleID"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/fragmentAddVehicle_edtVehicleId_textSize"
            android:layout_marginStart="@dimen/fragmentAddVehicle_edtVehicleId_marginStart"
            android:layout_marginEnd="@dimen/fragmentAddVehicle_edtVehicleId_marginEnd"
            android:layout_marginTop="@dimen/fragmentAddVehicle_edtVehicleId_marginTop"/>

        <TextView
            android:id="@+id/txtEnterVehicleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragmentAddVehicle_txtEnterVehicleName_text"
            android:textSize="@dimen/fragmentAddVehicle_txtEnterVehicleName_textSize"
            android:textColor="@color/base_grey"
            app:layout_constraintTop_toBottomOf="@id/edtVehicleID"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/fragmentAddVehicle_txtEnterVehicleName_marginStart"
            android:layout_marginTop="@dimen/fragmentAddVehicle_txtEnterVehicleName_marginTop"/>
        <EditText
            android:id="@+id/edtVehicleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtEnterVehicleName"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/fragmentAddVehicle_edtVehicleName_textSize"
            android:layout_marginStart="@dimen/fragmentAddVehicle_edtVehicleName_marginStart"
            android:layout_marginEnd="@dimen/fragmentAddVehicle_edtVehicleName_marginEnd"
            android:layout_marginTop="@dimen/fragmentAddVehicle_edtVehicleName_marginTop"/>

        <TextView
            android:id="@+id/txtEnterVehicleType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragmentAddVehicle_txtEnterVehicleType_text"
            android:textSize="@dimen/fragmentAddVehicle_txtEnterVehicleType_textSize"
            android:textColor="@color/base_grey"
            app:layout_constraintTop_toBottomOf="@id/edtVehicleName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/fragmentAddVehicle_txtEnterVehicleType_marginStart"
            android:layout_marginTop="@dimen/fragmentAddVehicle_txtEnterVehicleType_marginTop"/>
        <EditText
            android:id="@+id/edtVehicleType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtEnterVehicleType"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/fragmentAddVehicle_edtVehicleType_textSize"
            android:layout_marginStart="@dimen/fragmentAddVehicle_edtVehicleType_marginStart"
            android:layout_marginEnd="@dimen/fragmentAddVehicle_edtVehicleType_marginEnd"
            android:layout_marginTop="@dimen/fragmentAddVehicle_edtVehicleType_marginTop"/>

        <TextView
            android:id="@+id/txtEnterVehiclePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragmentAddVehicle_txtEnterVehiclePrice_text"
            android:textSize="@dimen/fragmentAddVehicle_txtEnterVehiclePrice_textSize"
            android:textColor="@color/base_grey"
            app:layout_constraintTop_toBottomOf="@id/edtVehicleType"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/fragmentAddVehicle_txtEnterVehiclePrice_marginStart"
            android:layout_marginTop="@dimen/fragmentAddVehicle_txtEnterVehiclePrice_marginTop"/>
        <EditText
            android:inputType="number"
            android:id="@+id/edtVehiclePrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtEnterVehiclePrice"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/fragmentAddVehicle_edtVehiclePrice_textSize"
            android:layout_marginStart="@dimen/fragmentAddVehicle_edtVehiclePrice_marginStart"
            android:layout_marginEnd="@dimen/fragmentAddVehicle_edtVehiclePrice_marginEnd"
            android:layout_marginTop="@dimen/fragmentAddVehicle_edtVehiclePrice_marginTop"/>
        <Button
            android:id="@+id/btnAdd"
            android:textColor="@color/base_grey"
            android:backgroundTint="@color/electric_green"
            android:text="@string/fragmentAddVehicle_btnAdd_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtVehiclePrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/fragmentAddVehicle_btnAdd_marginTop"
            android:layout_marginBottom="@dimen/fragmentAddVehicle_btnAdd_marginBottom"/>
        <Button
            android:visibility="gone"
            android:id="@+id/btnUpdate"
            android:textColor="@color/base_grey"
            android:backgroundTint="@color/electric_green"
            android:text="@string/fragmentAddVehicle_btnUpdate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtVehiclePrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/fragmentAddVehicle_btnUpdate_marginTop"
            android:layout_marginBottom="@dimen/fragmentAddVehicle_btnUpdate_marginBottom"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>